2009-12-07  Dustin J. Mitchell <dustin@zmanda.com>
	* xfer-src/element-glue.c: fix uninitialized use of variable

2009-12-07  Dustin J. Mitchell <dustin@zmanda.com>
	* xfer-src/element-glue.c xfer-src/element-glue.h: full glue for
	  XFER_MECH_DIRECTTCP_LISTEN (source reorganized)
	* xfer-src/xfer-test.c: tests for same
	* xfer-src/dest-directtcp-connect.c perl/Amanda/Xfer.pod
	  perl/Amanda/Xfer.swg: new class
	* xfer-src/source-directtcp-listen.c: bugfix
	* xfer-src/xfer-element.c xfer-src/xfer-element.h xfer-src/xfer.c
	  xfer-src/xfer.h: reorganize xfer error handling, fix ref leaks
	* common-src/testutils.c: support for leak-checking
	* xfer-src/dest-buffer.c xfer-src/dest-null.c
	  server-src/xfer-source-holding.c device-src/xfer-dest-device.c
	  device-src/xfer-dest-taper-splitter.c device-src/xfer-source-device.c
	  device-src/xfer-source-taper.c: use revised error-handling
	* perl/amglue/source.c: fix refcount problem
	* xfer-src/Makefile.am: new files

2009-12-07  Dustin J. Mitchell <dustin@zmanda.com>
	* installcheck/mock/chg-ndmjob.pl installcheck/Installcheck/Mock.pm
	  installcheck/Makefile.am: new mock changer for ndmjob
	* ndmp-src/ndma_tape_simulator.c ndmp-src/ndmagents.h
	  ndmp-src/ndmjob.h ndmp-src/ndmjob_args.c: add EOM (both LEOM and
	  PEOM) support to the tape simulator

2009-12-07  Sam Couter <sam@couter.id.au>
	* AUTHORS: add Sam to AUTHORS
	* device-src/device.c device-src/Makefile.am
	  device-src/dvdrw-device.c: new dvd-rw device
	* configure.in config/amanda/dvdrw-device.m4: config
	  for it
	* device-src/vfs-device.c device-src/vfs-device.h: enable
	  subclassing of VFS device
	* man/xml-source/amanda-devices.7.xml: documentation
	* server-src/amcheck-device.pl: add usage() sub

2009-12-07  Sam Couter <sam@couter.id.au>
	* man/Makefile.am man/xml-source/*: fix documentation so out-of-tree
					  builds work

2009-12-07  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/calcsize.c: fix check_running_as.
